--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -16,15 +16,27 @@
     position: fixed;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background: var(--whiteColorDeam);
     width: 100%;
     padding: 1rem;
     z-index: 1000;
+    box-shadow: 0 2px 4px rgba(2, 15, 29, 0.242);
 }
 .logo{
     color: var(--blackColor);
+    font-weight: 600;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
 }
+
+.logo .icon{
+    font-size: 25px;
+    color: var(--PrimaryColor);
+    transform: translateY(5px);
+}
+
 @media screen and (max-width: 768px) {
     .navBar {
         position: absolute;
@@ -32,15 +44,64 @@
         height: max-content;
         width: 80%;
         border-radius: 1rem;
-        top: 6rem;
+        top: -500rem;
         left: 50%;
+        padding: 1rem;
         transform: translate(-50%);
         z-index: 2000;
         box-shadow: 0 2px 4px rgba(2, 15, 29, 0.904);
-        transition: 0.3s ease-in-out;
+        transition: 0.2s ease-in-out;
     }
 
     .navBar .navLists {
         flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+        padding: .5rem 0;
     }
+
+    .navBar .navLists .navItem{
+        padding: .5rem 0;
+    }
+
+    .navBar .navLists .navItem .navLink{
+        color: var(--textColor);
+        font-size: .9rem;
+        font-weight: 600;
+    }
+
+    .navBar .navLists .navItem .navLink:hover{
+        color: var(--PrimaryColor);
+    }
+
+    .btn{
+        margin-top: 1rem;
+    }
+    .btn a{
+        font-weight: 600;
+        color: var(--whiteColor);
+    }
+
+    .closeNavBar{
+        position: absolute;
+        top: 1rem;
+        right: 1.5rem;
+        color: var(--PrimaryColor);
+    }
+    .closeNavBar:hover{
+        color: var(--SecondaryColor);
+    }
+
+}
+.activeNavBar{
+    top: 7rem;
+}
+.toggleNavbar .icon{
+    font-size: 25px;
+    color: var(--PrimaryColor);
+}
+
+.toggleNavbar:hover .icon{
+    color: var(--SecondaryColor);
 }
